--- a/EE_Web/test-output/old/Suite/reporter-output.html
+++ b/EE_Web/test-output/old/Suite/reporter-output.html
@@ -1,129 +1,16 @@
 <h2>Reporter output</h2><table><tr><td>Chrome Browser is opened</td></tr>
 <tr><td>Browser is maximized.</td></tr>
-<tr><td>User has opened correct login page.</td></tr>
-<tr><td>User has clicked Forgot Password Link on Login window.</td></tr>
-<tr><td>Company Logo on Forgot Password is displayed</td></tr>
-<tr><td>Recovery Label on Forgot Password is displayed</td></tr>
-<tr><td>Recovery Message on Forgot Password is displayed</td></tr>
-<tr><td>Email Input Box on Forgot Password is displayed</td></tr>
-<tr><td>Login Link on Forgot Password is displayed</td></tr>
-<tr><td>Web page is refreshed.</td></tr>
-<tr><td>Reset Password Link is successfully sent to provided email address</td></tr>
-<tr><td>Background Image on Login Page is displayed</td></tr>
-<tr><td>Client Company Logo is displayed.</td></tr>
-<tr><td>'Username' label is displayed</td></tr>
-<tr><td>'Username' placeholder is displayed</td></tr>
-<tr><td>'Password' label is displayed</td></tr>
-<tr><td>'Password' placeholder is displayed</td></tr>
-<tr><td>'Username' input field is displayed</td></tr>
-<tr><td>'Password' input field is displayed</td></tr>
-<tr><td>Password wrapper is displayed</td></tr>
-<tr><td>Username is entered successfully.</td></tr>
-<tr><td>Password is entered successfully.</td></tr>
-<tr><td>Login Button is displayed</td></tr>
-<tr><td>User has clicked Login button and landed on correct homepage.</td></tr>
-<tr><td>Company Logo in header is displayed</td></tr>
-<tr><td>Go Button in header is displayed</td></tr>
-<tr><td>OutStanding Activity Icon in header is displayed</td></tr>
-<tr><td>OutStanding Activity Count in header is displayed</td></tr>
-<tr><td>Counselor Name in header is displayed</td></tr>
-<tr><td>Counselor Photo in header is displayed</td></tr>
-<tr><td>Sign Out link in header is displayed</td></tr>
-<tr><td>Bulk Upload icon is displayed</td></tr>
-<tr><td>Add LeadPlus icon is displayed</td></tr>
-<tr><td>Web page is refreshed.</td></tr>
-<tr><td>JoyRide button is displayed</td></tr>
-<tr><td>User has clicked Add Lead icon.</td></tr>
-<tr><td>User has entered Email Address successfully</td></tr>
-<tr><td>User has entered Mobile Number successfully</td></tr>
-<tr><td>User has clicked on Add Lead button successfully.</td></tr>
-<tr><td>User has clicked Close(X) button on RHS panel.</td></tr>
-<tr><td>Web page is refreshed.</td></tr>
-<tr><td>User has clicked Add Lead icon.</td></tr>
-<tr><td>User has entered First Name successfully</td></tr>
-<tr><td>User has entered Last Name successfully</td></tr>
-<tr><td>User has entered Email Address successfully</td></tr>
-<tr><td>User has entered Mobile Number successfully</td></tr>
-<tr><td>User has entered Highest Qualification successfully</td></tr>
-<tr><td>User has provided Season value successfully.</td></tr>
-<tr><td>User has provided Source value successfully.</td></tr>
-<tr><td>User has provided Channel value successfully.</td></tr>
-<tr><td>User has provided Priority value successfully.</td></tr>
-<tr><td>User has provided Status value successfully.</td></tr>
-<tr><td>User has provided Reason value successfully.</td></tr>
-<tr><td>User has provided ReferredTo value successfully.</td></tr>
-<tr><td>User has provided Entity1 value successfully.</td></tr>
-<tr><td>User has provided Entity2 value successfully.</td></tr>
-<tr><td>User has provided Entity3 value successfully.</td></tr>
-<tr><td>User has provided Entity4 value successfully.</td></tr>
-<tr><td>User has provided Best Call value successfully.</td></tr>
-<tr><td>User has provided Lead Qualified value successfully.</td></tr>
-<tr><td>User has provided Lead Contactable value successfully.</td></tr>
-<tr><td>User has provided Mobile Verified value successfully.</td></tr>
-<tr><td>User has provided Field1 value successfully.</td></tr>
-<tr><td>User has provided Field2 value successfully.</td></tr>
-<tr><td>User has provided Field3 value successfully.</td></tr>
-<tr><td>User has provided Field4 value successfully.</td></tr>
-<tr><td>User has provided Field5 value successfully.</td></tr>
-<tr><td>User has provided Country value successfully.</td></tr>
-<tr><td>User has provided State value successfully.</td></tr>
-<tr><td>User has provided City value successfully.</td></tr>
-<tr><td>User has provided City value successfully.</td></tr>
-<tr><td>User has clicked on Add Lead button successfully.</td></tr>
-<tr><td>User has clicked Close(X) button on RHS panel.</td></tr>
-<tr><td>Global Search Bar is displayed.</td></tr>
-<tr><td>Global Search placeholder is displayed.</td></tr>
-<tr><td>Global Search Lense Icon is displayed.</td></tr>
-<tr><td>Global Search Go button is displayed.</td></tr>
-<tr><td>Specified user details are successfully located in the system.</td></tr>
-<tr><td>Screenshot is taken and stored at specified location successfully.</td></tr>
-<tr><td>Web page is refreshed.</td></tr>
-<tr><td>Dashboard URL is correct.</td></tr>
-<tr><td>Recent New Tab is displayed.</td></tr>
-<tr><td>Recent New Tab Count displayed is correct.</td></tr>
-<tr><td>Recent Online Tab is displayed.</td></tr>
-<tr><td>Recent Online Tab Count displayed is correct.</td></tr>
-<tr><td>Upcoming Followup Tab is displayed.</td></tr>
-<tr><td>Upcoming Followup Tab Count displayed is correct.</td></tr>
-<tr><td>Upcoming Walkins Tab is displayed.</td></tr>
-<tr><td>Upcoming Walkins Tab Count displayed is correct.</td></tr>
-<tr><td>High Priority Tab is displayed.</td></tr>
-<tr><td>High Priority Tab Count displayed is correct.</td></tr>
-<tr><td>Lead List Page URL is correct.</td></tr>
-<tr><td>All Tab is displayed.</td></tr>
-<tr><td>All Tab Count displayed is correct.</td></tr>
-<tr><td>New Tab is displayed.</td></tr>
-<tr><td>New Tab Count displayed is correct.</td></tr>
-<tr><td>Callback Tab is displayed.</td></tr>
-<tr><td>Callback Tab Count displayed is correct.</td></tr>
-<tr><td>Walkin Tab is displayed.</td></tr>
-<tr><td>Walkin Tab Count displayed is correct.</td></tr>
-<tr><td>Enrolled Tab is displayed.</td></tr>
-<tr><td>Enrolled Tab Count displayed is correct.</td></tr>
-<tr><td>Closed Tab is displayed.</td></tr>
-<tr><td>Closed Tab Count displayed is correct.</td></tr>
-<tr><td>Online Tab is displayed.</td></tr>
-<tr><td>Online Tab Count displayed is correct.</td></tr>
-<tr><td>Referred From Me Tab is displayed.</td></tr>
-<tr><td>Referred From Me Tab Count displayed is correct.</td></tr>
-<tr><td>Campaign Icon is displayed.</td></tr>
-<tr><td>User has successfully added new campaign.</td></tr>
-<tr><td>Refer All Leads Icon is displayed.</td></tr>
-<tr><td>User has referred all leads successfully.</td></tr>
-<tr><td>Send SMS To All Icon is displayed.</td></tr>
-<tr><td>User has sent SMS to all leads successfully.</td></tr>
-<tr><td>Send Email To All Icon is displayed.</td></tr>
-<tr><td>User has sent Email to all leads successfully.</td></tr>
-<tr><td>Send Email To All Icon is displayed.</td></tr>
-<tr><td>Download Leads Data Icon is displayed.</td></tr>
-<tr><td>User has successfully downloaded the leads data.</td></tr>
-<tr><td>Filter Leads Data Icon is displayed.</td></tr>
-<tr><td>User has successfully filtered the leads data.</td></tr>
-<tr><td>User has opened Edit Lead Panel.</td></tr>
-<tr><td>User has edited First Name.</td></tr>
-<tr><td>User has edited Last Name.</td></tr>
-<tr><td>User has edited Last Name.</td></tr>
-<tr><td>User has clicked on Update Lead button successfully.</td></tr>
-<tr><td>Test report has been sent to intended recepeints successfully</td></tr>
-<tr><td>Test report has been sent to intended recepeints successfully</td></tr>
+<tr><td>User has opened correct Application Form page.</td></tr>
+<tr><td>User has entered Full Name successfully.</td></tr>
+<tr><td>User has entered Mobile successfully.</td></tr>
+<tr><td>User has entered Email Address successfully.</td></tr>
+<tr><td>User has clicked Submit button successfully.</td></tr>
+<tr><td>User has opened Application Form successfully.</td></tr>
+<tr><td>User has opened calender successfully.</td></tr>
+<tr><td>User has selected date successfully.</td></tr>
+<tr><td>User has entered blood group value successfully.</td></tr>
+<tr><td>User has entered Gender value successfully.</td></tr>
+<tr><td>User has entered Citizenship value successfully.</td></tr>
+<tr><td>User has entered Nationality value successfully.</td></tr>
+<tr><td>User has entered Domicile value successfully.</td></tr>
 </table>
