--- a/EE_Web/test-output/old/Suite/reporter-output.html
+++ b/EE_Web/test-output/old/Suite/reporter-output.html
@@ -61,4 +61,7 @@
 <tr><td>User has attached Certificate4 successfully.</td></tr>
 <tr><td>User has attached Certificate5 successfully.</td></tr>
 <tr><td>User has clicked Next button on Step 3 successfully.</td></tr>
+<tr><td>User has entered Payment Type value successfully.</td></tr>
+<tr><td>User has entered Payment Amount value successfully.</td></tr>
+<tr><td>User has clicked Submit button on Step 3 successfully.</td></tr>
 </table>
