--- a/EE_Web/test-output/old/Suite/reporter-output.html
+++ b/EE_Web/test-output/old/Suite/reporter-output.html
@@ -5,6 +5,10 @@
 <tr><td>User has entered Mobile successfully.</td></tr>
 <tr><td>User has entered Email Address successfully.</td></tr>
 <tr><td>User has clicked Submit button successfully.</td></tr>
+<tr><td>Provided First Name matches the value stored in database.</td></tr>
+<tr><td>Provided Mobile Number matches the value stored in database.</td></tr>
+<tr><td>Provided Email Address matches the value stored in database.</td></tr>
+<tr><td>Provided Lead details are submitted successfully.</td></tr>
 <tr><td>User has opened Application Form successfully.</td></tr>
 <tr><td>User has opened calender successfully.</td></tr>
 <tr><td>User has provided Date of Birth successfully.</td></tr>
@@ -26,7 +30,6 @@
 <tr><td>User has entered Alternate Address 2 value successfully.</td></tr>
 <tr><td>User has entered Alternate Contact Number value successfully.</td></tr>
 <tr><td>User has clicked Next button  on Step 1 successfully.</td></tr>
-<tr><td>Provided DOB matches the value stored in database.</td></tr>
 <tr><td>User has entered Fathers Name value successfully.</td></tr>
 <tr><td>User has entered Mothers Name value successfully.</td></tr>
 <tr><td>User has entered Guardians Name value successfully.</td></tr>
@@ -34,32 +37,9 @@
 <tr><td>User has entered Guardians Address 2 value successfully.</td></tr>
 <tr><td>User has entered Guardians Contact Number value successfully.</td></tr>
 <tr><td>User has entered Guardians Relation value successfully.</td></tr>
-<tr><td>User has clicked Next button on Step 2successfully.</td></tr>
-<tr><td>User has entered Course value successfully.</td></tr>
-<tr><td>User has entered SSC School Name value successfully.</td></tr>
-<tr><td>User has entered SSC Registration Number value successfully.</td></tr>
-<tr><td>User has entered Year of Passing successfully.</td></tr>
-<tr><td>User has entered SSC Registration Number value successfully.</td></tr>
-<tr><td>User has entered SSC Mode of Study value successfully.</td></tr>
-<tr><td>User has entered HSC School Name value successfully.</td></tr>
-<tr><td>User has entered HSC Registration Number value successfully.</td></tr>
-<tr><td>User has entered HSC Year of Passing successfully.</td></tr>
-<tr><td>User has entered HSC Registration Number value successfully.</td></tr>
-<tr><td>User has entered HSC Mode of Study value successfully.</td></tr>
-<tr><td>User has entered Entrance Exam value successfully.</td></tr>
-<tr><td>User has entered Subject 1 Name value successfully.</td></tr>
-<tr><td>User has entered Subject1 Marks1 value successfully.</td></tr>
-<tr><td>User has entered Subject1 Percetage1 Value successfully.</td></tr>
-<tr><td>User has entered Subject2 Name value successfully.</td></tr>
-<tr><td>User has entered Subject2 Marks2 value successfully.</td></tr>
-<tr><td>User has entered Subject2 Percetage2 Value successfully.</td></tr>
-<tr><td>User has entered Subject3 Name value successfully.</td></tr>
-<tr><td>User has entered Subject3 Marks3 value successfully.</td></tr>
-<tr><td>User has entered Subject3 Percetage3 Value successfully.</td></tr>
 <tr><td>User has attached Certificate1 successfully.</td></tr>
 <tr><td>User has attached Certificate2 successfully.</td></tr>
 <tr><td>User has attached Certificate3 successfully.</td></tr>
 <tr><td>User has attached Certificate4 successfully.</td></tr>
 <tr><td>User has attached Certificate5 successfully.</td></tr>
-<tr><td>User has clicked Next button on Step 3 successfully.</td></tr>
 </table>
