--- a/EE_Web/test-output/old/Suite/reporter-output.html
+++ b/EE_Web/test-output/old/Suite/reporter-output.html
@@ -1,6 +1,5 @@
 <h2>Reporter output</h2><table><tr><td>Chrome Browser is opened</td></tr>
 <tr><td>Browser is maximized.</td></tr>
-<tr><td>User has opened correct Application Form page.</td></tr>
 <tr><td>User has entered Full Name successfully.</td></tr>
 <tr><td>User has entered Mobile successfully.</td></tr>
 <tr><td>User has entered Email Address successfully.</td></tr>
@@ -16,30 +15,29 @@
 <tr><td>User has entered Gender value successfully.</td></tr>
 <tr><td>User has entered Citizenship value successfully.</td></tr>
 <tr><td>User has entered Nationality value successfully.</td></tr>
-<tr><td>User has entered Domicile value successfully.</td></tr>
+<tr><td>User has failed to provide Domicile value.</td></tr>
 <tr><td>User has entered Religion value successfully.</td></tr>
-<tr><td>User has entered Community value successfully.</td></tr>
-<tr><td>User has entered Caste value successfully.</td></tr>
+<tr><td>User has failed to provide Community value.</td></tr>
+<tr><td>User has failed to provide Caster value.</td></tr>
 <tr><td>User has entered Address value successfully.</td></tr>
-<tr><td>User has entered Country value successfully.</td></tr>
-<tr><td>User has entered State value successfully.</td></tr>
-<tr><td>User has entered City value successfully.</td></tr>
+<tr><td>User has failed to provide Country value.</td></tr>
+<tr><td>User has failed to State Gender value.</td></tr>
+<tr><td>User has failed to provide City value.</td></tr>
 <tr><td>User has entered Emergency Contact Number value successfully.</td></tr>
 <tr><td>User has entered Emergency Email value successfully.</td></tr>
 <tr><td>User has entered Alternate Address 1 value successfully.</td></tr>
 <tr><td>User has entered Alternate Address 2 value successfully.</td></tr>
 <tr><td>User has entered Alternate Contact Number value successfully.</td></tr>
 <tr><td>User has clicked Next button  on Step 1 successfully.</td></tr>
-<tr><td>User has entered Fathers Name value successfully.</td></tr>
-<tr><td>User has entered Mothers Name value successfully.</td></tr>
-<tr><td>User has entered Guardians Name value successfully.</td></tr>
-<tr><td>User has entered Guardians Address 1 value successfully.</td></tr>
-<tr><td>User has entered Guardians Address 2 value successfully.</td></tr>
-<tr><td>User has entered Guardians Contact Number value successfully.</td></tr>
-<tr><td>User has entered Guardians Relation value successfully.</td></tr>
+<tr><td>User has failed to provide Course value.</td></tr>
+<tr><td>User has failed to provide Year of Passing value.</td></tr>
+<tr><td>User has failed to provide SSC Mode of Study value.</td></tr>
+<tr><td>User has failed to provide HSC Year of Passing value.</td></tr>
+<tr><td>User has failed to provide HSC Mode of Study value.</td></tr>
 <tr><td>User has attached Certificate1 successfully.</td></tr>
 <tr><td>User has attached Certificate2 successfully.</td></tr>
 <tr><td>User has attached Certificate3 successfully.</td></tr>
 <tr><td>User has attached Certificate4 successfully.</td></tr>
 <tr><td>User has attached Certificate5 successfully.</td></tr>
+<tr><td>User has failed to provide Payment Type value.</td></tr>
 </table>
